# openvino-rs

./: .gitmodules  Cargo.toml  Dockerfile  README.md  RELEASING.md  SECURITY.md  clippy.toml  deny.toml  proposed-ci-main.yml
.github/workflows/: main.yml  scan.yml
ci/: publish.sh  realpath
crates/openvino/: Cargo.toml  README.md
crates/openvino-finder/: Cargo.toml  README.md
crates/openvino-finder/src/: lib.rs
crates/openvino-genai/: Cargo.toml  README.md
crates/openvino-genai-sys/: Cargo.toml  README.md  build.rs  genai_all.h
crates/openvino-genai-sys/src/: lib.rs
crates/openvino-genai-sys/src/linking/: dynamic.rs  mod.rs  runtime.rs
crates/openvino-genai/src/: chat_history.rs  chat_message.rs  decoded_results.rs  error.rs  generation_config.rs  json_container.rs  lib.rs  llm_pipeline.rs  perf_metrics.rs  streamer.rs  util.rs  vlm_pipeline.rs  whisper_generation_config.rs  whisper_pipeline.rs
crates/openvino-genai/tests/: chat_history.rs  llm_pipeline.rs  vlm_pipeline.rs  whisper_pipeline.rs
crates/openvino-genai/tests/common/: mod.rs
crates/openvino-genai/tests/fixtures/: mod.rs
crates/openvino-sys/: Cargo.toml  README.md  build.rs
crates/openvino-sys/src/: lib.rs
crates/openvino-sys/src/linking/: dynamic.rs  mod.rs  runtime.rs
crates/openvino-tensor-converter/: Cargo.toml  README.md
crates/openvino-tensor-converter/src/: lib.rs  main.rs
crates/openvino-tensor-converter/tests/: conversion.rs
crates/openvino/src/: blob.rs  core.rs  device_type.rs  dimension.rs  element_type.rs  error.rs  layout.rs  lib.rs  model.rs  network.rs  node.rs  partial_shape.rs  port.rs  prepostprocess.rs  property.rs  rank.rs  request.rs  resize_algorithm.rs  shape.rs  tensor.rs  tensor_desc.rs  util.rs  version.rs
crates/openvino/tests/: classify-alexnet.rs  classify-inception.rs  classify-mobilenet.rs  classify.rs  decode.rs  detect-inception.rs  memory-safety.rs  reshape.rs  setup.rs  util.rs
crates/openvino/tests/fixture/: README.md  mod.rs
crates/openvino/tests/fixtures/: mod.rs
crates/openvino/tests/fixtures/alexnet/: .gitignore  README.md  alexnet.mapping  alexnet.xml  build.sh  mod.rs  tensor-1x3x227x227-f32.bgr
crates/openvino/tests/fixtures/inception/: README.md  build.sh  inception-ssd.mapping  inception.mapping  inception.xml  mod.rs  tensor-1x3x299x299-fp32.bgr
crates/openvino/tests/fixtures/inception_ssd/: README.md  build.sh  inception-ssd.xml  mod.rs
crates/openvino/tests/fixtures/mobilenet/: README.md  build.sh  mobilenet.mapping  mobilenet.xml  mod.rs  tensor-1x224x224x3-f32.bgr
crates/xtask/: Cargo.toml
crates/xtask/src/: bump.rs  codegen.rs  main.rs  publish.rs  update.rs  util.rs
