[package]
name = "openvino-finder"
version = "0.3.3"
description = "A helper crate for finding OpenVINO installations on a system."
license = "Apache-2.0"
readme = "README.md"
authors = ["OpenVINO Project Developers"]
repository = "https://github.com/intel/openvino-rs"
documentation = "https://docs.rs/openvino-finder"
keywords = ["openvino", "machine-learning", "ml", "neural-network"]
categories = ["development-tools"]
edition = "2018"

[dependencies]
cfg-if = "1.0"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
