[package]
name = "openvino-finder"
description = "A helper crate for finding OpenVINO installations on a system."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"
repository = "https://github.com/intel/openvino-rs"
documentation = "https://docs.rs/openvino-finder"
keywords = ["openvino", "machine-learning", "ml", "neural-network"]
categories = ["development-tools"]

[dependencies]
cfg-if = "1.0"
log = "0.4"

[dev-dependencies]
env_logger = { workspace = true }
