[package]
name = "openvino-genai"
description = "High-level bindings for OpenVINO GenAI."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/openvino-genai"
keywords = ["openvino", "machine-learning", "genai", "llm"]
categories = ["api-bindings", "science"]
exclude = ["/tests"]

[dependencies]
openvino-genai-sys = { workspace = true }
openvino-finder = { workspace = true }

[dev-dependencies]
anyhow = "1.0"

[features]
runtime-linking = ["openvino-genai-sys/runtime-linking"]

[package.metadata.docs.rs]
features = ["runtime-linking"]
