[package]
name = "openvino-sys"
version = "0.6.0"
license = "Apache-2.0"
description = "Low-level bindings for OpenVINO (use the `openvino` crate for easier-to-use bindings)."
readme = "README.md"
authors = ["OpenVINO Project Developers"]
repository = "https://github.com/intel/openvino-rs"
documentation = "https://docs.rs/openvino-sys"
keywords = ["openvino", "machine-learning", "ml", "neural-network"]
categories = ["external-ffi-bindings", "science"]
edition = "2018"
include = [
    "/Cargo.toml",
    "/README.md",
    "/build.rs",
    "/src",
    # Since it is quite difficult to fit OpenVINO into the 10MB crate limit, this crate is published
    # with only the sources necessary for bindgen to build the Rust bindings. This means that the
    # crate can only be either:
    # - built from OpenVINO sources when built as the primary crate (unlikely usage)
    # - built from an OpenVINO installation when used as a dependency
    "/upstream/src/bindings/c/include",
]
links = "inference_engine_c_api"

[dependencies]
once_cell = { version = "1.18", optional = true }
libloading = { version = "0.8", optional = true }
openvino-finder = { version = "0.6.0", path = "../openvino-finder" }

[build-dependencies]
openvino-finder = { version = "0.6.0", path = "../openvino-finder" }
env_logger = "0.10"

[features]
# Linking features: `build.rs` will default to dynamic linking if none is selected.
# - Will find and bind to an OpenVINO shared library at compile time.
dynamic-linking = []
# - Will bind to an OpenVINO shared library at runtime using `load`.
runtime-linking = ["libloading", "once_cell"]

[package.metadata.docs.rs]
features = ["runtime-linking"]
