[package]
name = "openvino-tensor-converter"
version = "0.1.0"
authors = ["OpenVINO Project Developers"]
edition = "2018"
publish = false

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
structopt = { version = "0.3", default-features = false }
# Note: by default this will attempt to find a 4.x version of OpenCV libraries (e.g.
# `libopencv-dev`).
opencv = {version = "0.49", default-features = false, features = ["opencv-4", "buildtime-bindgen", "clang-runtime"]}

[features]
"opencv-32" = ["opencv/opencv-32"]

# Do not include this tool in the default build; the OpenCV dependency is too fragile in different
# OS environments for this to build reliably.
[workspace]
