[package]
name = "openvino"
version = "0.6.0"
license = "Apache-2.0"
description = "High-level bindings for OpenVINO."
readme = "README.md"
authors = ["OpenVINO Project Developers"]
repository = "https://github.com/intel/openvino-rs"
documentation = "https://docs.rs/openvino"
keywords = ["openvino", "machine-learning", "ml", "neural-network"]
categories = ["api-bindings", "science"]
edition = "2018"
exclude = ["/tests"]

[dependencies]
openvino-sys = { path = "../openvino-sys", version = "0.6.0" }
openvino-finder = { path = "../openvino-finder", version = "0.6.0" }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1"
float-cmp = "0.9"

[features]
runtime-linking = ["openvino-sys/runtime-linking"]

[package.metadata.docs.rs]
features = ["runtime-linking"]
