[package]
name = "xtask"
description = "Utility scripts for the openvino-rs workspace."
version = "0.1.0"
authors = ["OpenVINO Project Developers"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
bindgen = "0.58.1"
structopt = { version = "0.3", features = ["color", "suggestions"] }
toml = "0.5.8"
semver = "0.11"
