[package]
name = "xtask"
description = "Utility scripts for the openvino-rs workspace."
version = "0.1.0"
license = "Apache-2.0"
authors = ["OpenVINO Project Developers"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
bindgen = "0.61"
structopt = { version = "0.3", features = ["color", "suggestions"] }
toml = "0.5.8"
semver = "1.0"
