[package]
name = "xtask"
description = "Utility scripts for the openvino-rs workspace."
version = "0.1.0"
license = "Apache-2.0"
authors = ["OpenVINO Project Developers"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
bindgen = "0.70.1"
clap = { version = "4.4.4", features = ["derive"] }
toml = "0.8.0"
semver = "1.0"
regex = "1.10.4"
